--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ welcome_message: <a href="https://github.com/onevcat/vno-jekyll" target="_blank"
 description: 学习使我快乐
 creator: <a href="https://github.com/CoolestEnoch">@CoolestEnoch</a>
 
-url: "https://github.com/CoolestEnoch"
+url: "https://github.com/CoolestEnoch/Course_SYU"
 
 permalink: /:year/:month/:title/
 
