--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 3.1.x
+          ruby-version: 3.1.4
       - name: Install Jekyll and Bundler
         run: gem install jekyll bundler
       - name: Build the site
