--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: 资源分享
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: 某大学某学院某年级的资源分享站
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://cdn.jsdelivr.net/gh/Fuukei/Public_Repository@latest/vision/smilies/tiebapng/icon_huaji.png
