--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: 资源分享
 
 # Short bio or description (displayed in the header)
-description: 某大学某学院某年级的资源分享站
+description: 某大学某学院某年级的资源分享站     毕业快乐！本站将归档处理。
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://cdn.jsdelivr.net/gh/Fuukei/Public_Repository@latest/vision/smilies/tiebapng/icon_huaji.png
